<resources>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="bill">Bill</string>
    <string name="cate">Cate</string>
    <string name="menu">Menu</string>
    <string name="Cate">Cate</string>
    <string name="favorite">Favorites</string>
    <string name="transactions">Transactions</string>
    <string name="more">More</string>
    <string name="basket">Basket</string>
    <string name="checkout">Checkout</string>

    <string name="default_currency">£ </string>
    <string name="enter_amount">Enter Amount</string>
    <string name="default_amount">0</string>
    <string name="select_discount">Select Discount</string>
    <string name="enter_tip_amount">Enter Tip Amount</string>
    <string name="percent_10">10%</string>
    <string name="percent_25">25%</string>
    <string name="percent_0">0%</string>
    <string name="tip">Tip</string>
    <string name="charge">Charge</string>
    <string name="item_image">Item image</string>
    <string name="default_item_name">Coffee</string>
    <string name="empty_string" />
    <string name="description">Description</string>
    <string name="subtract_sign">-</string>
    <string name="default_qty">1</string>
    <string name="add_sign">+</string>
    <string name="default_price">0.00</string>
    <string name="resend_code">Resend Code</string>
    <string name="time_left">Time Left</string>
    <string name="copyright">
        Copyright ©
         <a href="https://ordergo-tma-test.web.app">OrderGOTest</a>
         2021.</string>

    <string name="ordergo_does_not_retain_any_personal_data">OrderGO does not retain any personal data.</string>
    <string name="your_mobile_number">Your Mobile Number</string>
    <string name="subtotal_text">Subtotal</string>
    <string name="pay_charge_text">Pay Charge</string>
    <string name="discount_text">Discount</string>
    <string name="optional_discount">Discount (Optional)</string>
    <string name="vat_text">Vat</string>
    <string name="net_amount_text">Net Amount</string>
    <string name="check_out_text">Checkout</string>
    <string name="start_body"><![CDATA[Eliminating the terminal rent, all sort of risks with an automatic & secure process]]></string>
    <string name="lets_go">LETS GO!</string>
    <string name="connection_timed_out">An error occurred during connection .. Please try again later</string>
    <string name="network_error">Please check your internet connection</string>
    <string name="generic_error">Generic Error</string>
    <string name="ok">OK</string>
    <string name="add_to_basket">Add To Basket</string>
    <string name="bill_discount_fixed_amount">Fixed amount £</string>
    <string name="bill_discount_Percentage">Percentage %</string>
    <string name="checkout_discount_options">Discount Options:</string>
    <string name="checkout_tips_options">Tip Options:</string>
    <string name="checkout_Payment_options">Payment Methods</string>
    <string name="checkout_service_charge">Service charge</string>
    <string name="checkout_discount_fixed_amount">Fixed amount</string>
    <string name="checkout_discount_Percentage">Percentage</string>
    <string name="checkout_payment_method_cash">Cash</string>
    <string name="checkout_payment_method_online">Online</string>
    <string name="checkout_payment_method_card">Card</string>
    <string name="notes">Notes</string>
    <string name="print">Print</string>
    <string name="cancel">Cancel</string>
    <string name="error_input_required">This is a required input</string>
    <string name="menu_empty_message">No Items Found</string>
    <string name="transactions_empty_message">No Transactions Found</string>
    <string name="send">Send</string>
    <string name="confirm">Confirm</string>
    <string name="confirmcode">Confirm Code</string>
    <string-array name="integration_type">
        <item>Pay Works</item>
        <item>Payment sense</item>
        <item>None-integration</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="amount">Amount</string>
    <string name="integration_type">Integration Type</string>
    <string name="search_for_items">Menu item</string>
    <string name="type">Type</string>
    <string name="menu_item_image">Menu Item Image</string>
    <string name="fav_icon">Fav Icon</string>
    <string name="_50_00">£50.00</string>
    <string name="item_test">Item Test</string>
    <string name="item_test_details">Item Test details</string>
    <string name="item_details_image">Item Details Image</string>
    <string name="code_verification_logo">code verification logo</string>
    <string name="_1">1</string>
    <string name="more_menu">more_menu</string>
    <string name="_100">100</string>
    <string name="paid">paid</string>
    <string name="_21_09_2022">21-09-2022</string>
    <string name="bill_image">Bill Image</string>

</resources>