<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/billFragment"
        android:enabled="true"

        android:icon="@drawable/ic_cloud_print_outline_white_24dp"
        android:title="@string/bill" />
    <item
        android:id="@+id/menuFragment"
        android:enabled="true"
        android:icon="@drawable/ic_view_grid_white_24dp"
        android:title="@string/menu" />
    <item
        android:id="@+id/favoritesFragment"
        android:enabled="true"
        android:icon="@drawable/ic_cards_heart_white_24dp"
        android:title="@string/favorite" />

    <item
        android:id="@+id/basketFragment"
        android:enabled="true"
        android:icon="@drawable/ic_cart_variant_white_24dp"
        android:title="@string/basket" />

    <item
        android:id="@+id/moreFragment"
        android:enabled="true"
        android:icon="@drawable/ic_menu"
        android:title="@string/more" />
</menu>