<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/pad_med"
        android:text="@string/item_test"
        android:textColor="@color/black_resources"
        android:textSize="@dimen/txt_xlarge"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/pad_med"
        android:text="@string/item_test_details"
        android:textSize="@dimen/txt_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_title" />


    <include
        android:id="@+id/qty_layout"
        layout="@layout/qty_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/pad_med"
        app:layout_constraintBottom_toBottomOf="@id/item_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/item_title" />

    <ImageView
        android:id="@+id/iv_add_favourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/pad_med"
        android:contentDescription="@string/fav_icon"
        android:src="@drawable/fav_not_selected"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/qty_layout"
        app:tint="@color/colorPrim" />


</androidx.constraintlayout.widget.ConstraintLayout>