<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/pad_med"
    android:layout_marginTop="@dimen/pad_xlarge">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkout_tips_options"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/txt_large"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rg_discount_tips"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/pad_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <RadioButton
            android:id="@+id/rb_tips_fixed_amount"
            style="@style/Widget.App.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/bill_discount_fixed_amount"
            android:textSize="@dimen/txt_small" />

        <RadioButton
            android:id="@+id/rb_tips_percent"
            style="@style/Widget.App.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bill_discount_Percentage"
            android:textSize="@dimen/txt_small" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_tips_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/pad_small"
        android:layout_marginTop="@dimen/pad_small"
        android:layout_marginEnd="@dimen/pad_xxlarge"
        android:elevation="@dimen/pad_small"
        app:boxStrokeColor="@color/colorPrim"
        app:hintTextColor="@color/colorPrim"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_discount_tips">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_amount"
            android:inputType="numberDecimal"
            android:padding="@dimen/pad_med"
            android:textSize="@dimen/txt_med" />
    </com.google.android.material.textfield.TextInputLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/pad_med"
        android:layout_marginBottom="@dimen/pad_med"
        android:background="@color/lightgrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_tips_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>