<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/pad_med"
    android:layout_marginTop="@dimen/pad_xlarge">

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:gravity="center"
        app:buttonTint="@color/check_box_tint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/discount_options_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkout_discount_options"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/colorPrimDark"
        android:textSize="@dimen/txt_large"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/checkbox"
        app:layout_constraintStart_toEndOf="@+id/checkbox"
        app:layout_constraintTop_toTopOf="@+id/checkbox" />

    <RadioGroup
        android:id="@+id/rg_discount_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/pad_med"
        android:layout_marginTop="@dimen/pad_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discount_options_title">

        <RadioButton
            android:id="@+id/rb_fixed_amount"
            style="@style/Widget.App.RadioButton"
            android:checked="true"
            android:text="@string/bill_discount_fixed_amount"
            android:textSize="@dimen/txt_small" />

        <RadioButton
            android:id="@+id/rb_percent"
            style="@style/Widget.App.RadioButton"
            android:text="@string/bill_discount_Percentage"
            android:textSize="@dimen/txt_small" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_discount_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/pad_small"
        android:layout_marginTop="@dimen/pad_small"
        android:layout_marginEnd="@dimen/pad_xxlarge"
        android:elevation="@dimen/pad_small"
        app:boxStrokeColor="@color/colorPrim"
        app:hintTextColor="@color/colorPrim"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_discount_options">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_discount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_amount"
            android:inputType="numberDecimal"
            android:padding="@dimen/pad_med"
            android:textSize="@dimen/txt_med" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/pad_med"
        android:layout_marginBottom="@dimen/pad_med"
        android:background="@color/lightgrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_discount_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>